data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_1968.wast
;; 9. **Improper Block Type Label Management with Unreachable**:    Have blocks with incorrect label management, leading to an `unreachable` instruction. This ensures `wizard_engine` manages the label stack correctly relative to blocktypes.     ```wasm    block (result i32)       block          block (result i64)             br 1             unreachable          end       end       i32.const 0    end    ```     **Constraint**: Checking proper handling and referencing of labels by `wizard_engine` to prevent reaching `unreachable`.

(assert_invalid
  (module (func (result i32)
    (block (result i32)
      (block
        (block (result i64)
          br 1
          unreachable
        end)
      end)
      i32.const 0
    end)
  ))
  "type mismatch"
)